--- a/busstops/templates/index.html
+++ b/busstops/templates/index.html
@@ -30,8 +30,8 @@
 
     <div class="pane">
         <h2>Map</h2>
-
         <p><a href="/map" class="button" style="color: white">Track buses and find bus stops nearby</a></p>
+        <li><a href="/vehicles/nasa-iss"> or maybe you want to see where the ISS is right now?</a></li>
     </div>
 </div>
 
