--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -82,7 +82,7 @@
         The 'now "m"' tag returns the month as a string (e.g., "01" for Jan, "06" for Jun).
         We need to compare it to "06" for June.
     {% endcomment %}
-    {% if '/operators/nasa' in request.path %}
+    {% if "/operators/nasa" in request.path or "/vehicles/nasa-iss" in request.path %}
         <img src="https://assets.timesbus.org/timesspace.svg?v" height="28px" alt="NASA Operator Logo" />
     {% elif current_month_str == "06" %}
         <img src="https://assets.timesbus.org/gaytimes.svg" height="28px" />
