--- a/busstops/templates/maintenance.html
+++ b/busstops/templates/maintenance.html
@@ -1,4 +1,4 @@
-{% if not show_alert %}
+{% if show_alert %}
 <div class="maintenance-alert" style="
     color: #ffffff;
     padding: 28px 28px;
@@ -6,7 +6,7 @@
     line-height: .8rem;
     font-weight: bold;
     margin-bottom: 15px;
-    background-image: url('//cdn.transportthing.uk/maintenance.svg?s');
+    background-image: url('//cdn.transportthing.uk/maintenance.svg?s2');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
