--- a/busstops/templates/maintenance.html
+++ b/busstops/templates/maintenance.html
@@ -11,7 +11,7 @@
     background-repeat: no-repeat;
     background-size: contain;
 ">
-    <p>&#9888; <strong>Heads Up!</strong> We're making a few changes to the site</p>
-    <p>Expect brief interruptions for the next hour or so.<br>We apologize for any inconvenience!</p>
+    <p>&#9888; <strong>Notice: </strong>Ticketer Maintenance is happening soon</p>
+    <p>the tracking for operators that use Ticketer<br>will be down or unstable during the maintenance</p>
 </div>
 {% endif %}
