--- a/busstops/templates/index.html
+++ b/busstops/templates/index.html
@@ -11,8 +11,7 @@
 {% block content %}
 
 <p>
-    <!-- turning open data into <a href="/map">real-time maps</a>, timetables and more</p> -->
-    maps, timetables and more
+    turning operators open data into <a href="/map">real-time maps</a>, timetables and more</p>
 </p>
 
 <div class="panes">
@@ -27,11 +26,10 @@
             </p>
         </form>
     </div>
-
     <div class="pane">
         <h2>Map</h2>
-        <p><a href="/map" class="button" style="color: white">Track buses and find bus stops nearby</a></p>
-        <p><a href="/vehicles/nasa-iss" class="button" style="color: white">Track the ISS!</a></p>
+        <p><a href="/map" class="button" style="color: white">Track buses and find bus stops!</a></p>
+        <p><a href="/vehicles/nasa-iss" class="button" style="color: white">Track the ISS while it orbits earth</a></p>
     </div>
 </div>
 <h2>Regions</h2>
@@ -61,9 +59,12 @@
             <li><a href="/region/Y">Yorkshire</a></li>
         </ul>
     </li>
-    <li><a href="/region/W">Wales</a></li>
-    <li><a href="/region/S">Scotland</a></li>
-    <li><a href="/region/GB">Great Britain</a></li>
+    <li>Other regions in the UK
+    <ul class="long">
+        <li><a href="/region/W">Wales</a></li>
+        <li><a href="/region/S">Scotland</a></li>
+        <li><a href="/region/GB">Great Britain</a></li>
+    </ul>
     {% if request.headers.cf_ipcountry != "IE" %}
     <li><a href="/region/NI">Northern Ireland</a></li>
     <li>Ireland
@@ -75,9 +76,13 @@
         </ul>
     </li>
     {% endif %}
-    <li><a href="/region/IM">Isle of Man</a></li>
-    <li><a href="/region/GG">Guernsey</a></li>
-    <li><a href="/region/JE">Jersey</a></li>
+    </li>
+    <li>Outer Islands
+        <ul class="long">
+            <li><a href="/region/IM">Isle of Man</a></li>
+            <li><a href="/region/GG">Guernsey</a></li>
+            <li><a href="/region/JE">Jersey</a></li>
+        </ul>
+    </li>
 </ul>
-
 {% endblock content %}
