--- a/accounts/templates/user_detail.html
+++ b/accounts/templates/user_detail.html
@@ -51,7 +51,7 @@
     {% endif %}
 
     {% for ou in object.operatoruser_set.all %}
-        <p>{{ ou.operator }}</p>
+        <p>{% if user.is_superuser %}<a href="/admin/busstops/operator/{{ ou.operator.noc }}/change/">{% endif %}{{ ou.operator }}{% if user.is_superuser %}</a>{% endif %}</p>
     {% endfor %}
 
 {% endblock content %}
