--- a/busstops/templates/maintenance.html
+++ b/busstops/templates/maintenance.html
@@ -1,17 +1,16 @@
 {% if show_alert %}
 <div class="maintenance-alert" style="
-    color: #ffffff;
+    color: #111111;
     padding: 28px 28px;
     text-align: center;
     line-height: .8rem;
     font-weight: bold;
     margin-bottom: 15px;
-    background-image: url('//cdn.transportthing.uk/maintenance.svg?s2');
+    background-image: url('//cdn.transportthing.uk/maintenance_light.svg?s2');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-">
-    <p>&#9888; <strong>Notice: </strong>Ticketer Maintenance is happening soon</p>
-    <p>the tracking for operators that use Ticketer<br>will be down or unstable during the maintenance</p>
+"> <p>&#9888; <strong>Ticketer Maintenance Window</strong> &#9888;</p> <p>complete loss of ticketer tracking is 
+    <strong>normal</strong></p>
 </div>
 {% endif %}
