--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -119,7 +119,7 @@
         <!--<li><a href="/data">Data sources</a></li>
 	<li><a href="/privacy">Privacy policy</a></li>-->
     </ul>
-    <div class="motd" style="margin-bottom: 20px; border-radius: 10px; border: 1px solid #1d5560; padding: 20px; box-sizing: border-box;">
+    <div class="motd" style="margin-bottom: 20px; padding: 20px; box-sizing: border-box;">
     	{% include "motd_partial.html" %}
     </div>
 <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
