--- a/busstops/templates/data.html
+++ b/busstops/templates/data.html
@@ -40,9 +40,16 @@
 <ul class="bulleted">
     <li><a href="https://data.bus-data.dft.gov.uk/avl/">BODS (Bus Open Data Service)</a></li>
     <li><a href="https://tfe-opendata.readme.io/">Transport for Edinburgh open data</a></li>
-    <!-- <li><a href="https://api-portal.tfwm.org.uk/">TfWM (Transport for West Midlands) API</a></li> -->
+    <li><a href="https://api-portal.tfwm.org.uk/">TfWM (Transport for West Midlands) API</a></li>
     <li>The Welsh Bus Data Service</li>
 </ul>
+
+<p>Livery Icons</p>
+<ul class="bulleted">
+     <li>some of our livery icons were originally made by Oxon Buses - Check them out <a href="http://oxonbuses.co.uk">here</a>!</li>
+</ul>
+
+
 
 <p>Information about vehicles (colours, registrations, fleet numbers, etc.) has been contributed by dozens of enthusiastic contributors, and is available from <a href="/api/">the API</a>.</p>
 
