--- a/frontend/css/_base.scss
+++ b/frontend/css/_base.scss
@@ -235,6 +235,7 @@ body {
 	background-size: contain;
         background-position: center;
         position: absolute;
+        padding-left: 1.75rem;
     }
 
     div {
