--- a/vehicles/templates/vehicles.html
+++ b/vehicles/templates/vehicles.html
@@ -18,9 +18,9 @@
 
 <h1>Vehicles</h1>
 
-<p>It’s not the main point of transportthing.uk, but we do have some unofficial fleet lists and things – a by-product of the <a href="/map">live bus tracking map</a>, with additional information provided by our wonderful users.</p>
+<p><a href="#">transportthing.uk</a> is a fleet listing site, we collect live tracking data from operators, that is enhanced with additional information provided by our wonderful users.</p>
 
-<p>There’s also <a href="/api/vehicles/">a vehicle information API</a>.</p>
+<p>There’s also <a href="https://csm.transportthing.uk/api/vehicles/">a vehicle information API</a>.</p>
 
 <h2>Operators</h2>
 
