--- a/busstops/templates/data.html
+++ b/busstops/templates/data.html
@@ -40,8 +40,9 @@
 <ul class="bulleted">
     <li><a href="https://data.bus-data.dft.gov.uk/avl/">BODS (Bus Open Data Service)</a></li>
     <li><a href="https://tfe-opendata.readme.io/">Transport for Edinburgh open data</a></li>
-    <li><a href="https://api-portal.tfwm.org.uk/">TfWM (Transport for West Midlands) API</a></li>
-    <li>The Welsh Bus Data Service</li>
+    <!-- <li><a href="https://passenger.tech">Passenger Cloud</a></li>-->
+    <!-- <li><a href="https://api-portal.tfwm.org.uk/">TfWM (Transport for West Midlands) API</a></li> -->
+    <!-- <li>The Welsh Bus Data Service</li>--> 
 </ul>
 
 <p>Livery Icons</p>
