--- a/busstops/templates/trains.html
+++ b/busstops/templates/trains.html
@@ -296,18 +296,18 @@
                              },
                              paint: {
                                   'icon-color': [
-                                    'match', ['get', 'toc'], 'AW', '#005432', 'CC', '#003399', 'CH', '#673AB7', 'EM', '#FF5722',
-                                     'ES', '#673AB7', 'GN', '#3F51B5', 'GR', '#FF9800', 'GW', '#795548', 'HX', '#FFC107',
-                                     'LE', '#00BCD4', 'LM', '#4CAF50', 'LO', '#FF9800', 'ME', '#9C27B0', 'MV', '#E91E63',
-                                     'NT', '#FF0000', 'SR', '#00796B', 'SW', '#03A9F4', 'TL', '#9E9E9E', 'TP', '#2196F3',
-                                     'TW', '#8BC34A', 'VT', '#FFEB3B', '#FFFFFF'
+                                    'match', ['get', 'toc'], 'AW', '#FFF', 'CC', '#FFF', 'CH', '#FFF', 'EM', '#FFF',
+                                     'ES', '#FFF', 'GN', '#FFF', 'GR', '#FFF', 'GW', '#FFF', 'HX', '#FFF',
+                                     'LE', '#FFF', 'LM', '#FFF', 'LO', '#FFF', 'ME', '#FFF', 'MV', '#FFF',
+                                     'NT', '#FFF', 'SR', '#FFF', 'SW', '#FFF', 'TL', '#FFF', 'TP', '#FFF',
+                                     'TW', '#FFF', 'VT', '#FFF', '#FFF'
                                   ],
                                  'text-color': [
-                                    'match', ['get', 'toc'], 'AW', '#005432', 'CC', '#003399', 'CH', '#673AB7', 'EM', '#FF5722',
-                                     'ES', '#673AB7', 'GN', '#3F51B5', 'GR', '#FF9800', 'GW', '#795548', 'HX', '#FFC107',
-                                     'LE', '#00BCD4', 'LM', '#4CAF50', 'LO', '#FF9800', 'ME', '#9C27B0', 'MV', '#E91E63',
-                                     'NT', '#FF0000', 'SR', '#00796B', 'SW', '#03A9F4', 'TL', '#9E9E9E', 'TP', '#2196F3',
-                                     'TW', '#8BC34A', 'VT', '#FFEB3B', '#FFFFFF'
+                                    'match', ['get', 'toc'], 'AW', '#FFF', 'CC', '#FFF', 'CH', '#FFF', 'EM', '#FFF',
+                                     'ES', '#FFF', 'GN', '#FFF', 'GR', '#FFF', 'GW', '#FFF', 'HX', '#FFF',
+                                     'LE', '#FFF', 'LM', '#FFF', 'LO', '#FFF', 'ME', '#FFF', 'MV', '#FFF',
+                                     'NT', '#FFF', 'SR', '#FFF', 'SW', '#FFF', 'TL', '#FFF', 'TP', '#FFF',
+                                     'TW', '#FFF', 'VT', '#FFF', '#FFF'
                                  ],
                                  'text-halo-color': '#000000',
                                  'text-halo-width': 1
