--- a/vehicles/templates/operator_vehicles.html
+++ b/vehicles/templates/operator_vehicles.html
@@ -17,6 +17,13 @@
 <h1>{% firstof parent object %}</h1>
 
 {% if not parent %}
+<p>{{ object.get_a_mode }} operator
+    {% if operator.regions.all %}
+        in
+        {% for region in operator.regions.all %}{% if not forloop.first %}{% if forloop.last %} and {% else %}, {% endif %}{% endif %}
+        <a href="{{ region.get_absolute_url }}">{{ region.the }}</a>{% endfor %}
+    {% elif operator.region %}in <a href="{{ object.region.get_absolute_url }}">{{ object.region.the }}</a>{% endif %}
+</p>
     <ul class="tabs">
         <li><a href="{{ object.get_absolute_url }}">Routes</a></li>
         {% if map %}
