--- a/busstops/templates/admin/base_site.html
+++ b/busstops/templates/admin/base_site.html
@@ -17,7 +17,10 @@
             width: 142px;
             height: 19px;
         }
-
+        #container {
+            background: url(https://cdn.transportthing.uk/something_bg.svg?vvv);
+            background-size: cover;
+        }
         #alogo {
             background-image: url(//cdn.transportthing.uk/admin_logo.svg?v24);
             background-size: contain;
