--- a/busstops/templates/index.html
+++ b/busstops/templates/index.html
@@ -29,7 +29,7 @@
     <div class="pane">
         <h2>Map</h2>
         <p><a href="/map" class="button" style="color: white">Track buses and find bus stops!</a></p>
-        <p><a href="/vehicles/nasa-iss" class="button" style="color: white">Track the ISS while it orbits earth</a></p>
+        <p><a href="/satellites" class="button" style="color: white">Check out the Satellite Hub</a></p>
     </div>
 </div>
 <h2>Regions</h2>
