--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -116,6 +116,7 @@
 	<li><a href="/rules">Rules & FAQ</a></li>
         <li><a href="/discord">Discord</a></li>
         <li><a href="/contact">Contact</a></li>
+        <li><a href="/updates">Site Updates</a></li>
         <!--<li><a href="/data">Data sources</a></li>
 	<li><a href="/privacy">Privacy policy</a></li>-->
     </ul>
@@ -124,21 +125,9 @@
     </div>
 <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
 <script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#164450', 'W7W21AYHUU');kofiwidget2.draw();</script>
-<!-- Matomo -->
-<script>
-  var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//mt.snubs.dev/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '1']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Matomo Code -->
+<script defer data-domain="transportthing.uk" src="https://plausible.io/js/script.hash.outbound-links.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
 </footer>
 {% endblock footer %}
 
