--- a/vehicles/templates/vehicle_revision.html
+++ b/vehicles/templates/vehicle_revision.html
@@ -12,7 +12,7 @@
             &centerdot; <a href="{% url 'admin:vehicles_vehiclerevision_change' revision.pk %}">✎</a>
         {% endif %}
         &centerdot;
-            <a href="/contact?message=I%20wish%20to%20report%20this%20content:%0A%0Ahttps://timesbus.org{% url 'admin:vehicles_vehiclerevision_change' revision.pk %}%0A%0A">Report</a>
+            <a href="/contact?message=I%20wish%20to%20report%20this%20content:%0A%0Ahttps://transportthing.uk{% url 'admin:vehicles_vehiclerevision_change' revision.pk %}%0A%0A">Report</a>
     <p>
         {% if revision.disapproved %}<del>{% endif %}
         {% include "vehicle_revision_changes.html" %}
