Show "View Withdrawn Vehicles" on Operator Group page too, while keeping "Recent Changes" and "Pending Vehicle Edits" on the operator page only. Thought this would be useful for anyone wanting to see withdrawn vehicles on a operator group :)
Also updated changes.html with an extra line that shows the change, instead of removing your first Satellite change note.

--- a/busstops/templates/changes.html
+++ b/busstops/templates/changes.html
@@ -14,6 +14,8 @@
 
 <ul class="changes">
         <li><p>Satellite Map Style updated to actually show street / place names</p></li>
+        &nbsp;
+        <li><p>Show "View Withdrawn Vehicles" on the <a href="/groups/Stagecoach/vehicles">operator group page</a>.</p></li>
 </ul>
 
 
