--- a/vehicles/templates/vehicle_revision.html
+++ b/vehicles/templates/vehicle_revision.html
@@ -42,14 +42,20 @@
                 <button type="button" class="button" hx-post="{% url 'vehicle_revision_action' revision.id 'disapprove' %}">⚠️ Cancel</button>
             {% elif user.trusted %}
                 <button type="button" class="button" hx-post="{% url 'vehicle_revision_action' revision.id 'apply' %}" hx-prompt="Reason for approving">👍 Apply changes</button>
-                <button type="button" class="button" hx-post="{% url 'vehicle_revision_action' revision.id 'disapprove' %}" hx-prompt="Reason for declining">⚠️ Decline</button>
+                <button type="button" class="button" hx-post="{% url 'vehicle_revision_action' revision.id 'disapprove' %}" hx-prompt="Reason for declining">⚠️ Decline changes</button>
             {% else %}
                 Pending
             {% endif %}
         {% else %}
             {% if user.trusted and revision.disapproved and revision.approved_by_id == user.id %}
                 <button type="button" class="button" hx-post="{% url 'vehicle_revision_action' revision.id 'apply' %}" hx-prompt="Reason for approving">👍 Apply changes</button>
+
+                {% if user.trusted and revision.approved and revision.approved_by_id == user.id %} 
+                    <button type="button" class="button" hx-post="{% url 'vehicle_revision_action' revision.id 'disapprove' %}" hx-prompt="Reason for declining">⚠️ Decline Changes</button> 
+                {% endif %}
+
             {% endif %}
         {% endif %}
     </p>
+
 </li>
