--- a/accounts/templates/user_detail.html
+++ b/accounts/templates/user_detail.html
@@ -54,7 +54,7 @@
         <p>
             {% if user.is_superuser %}
                 <a href="/admin/busstops/operator/{{ ou.operator.noc }}/change/">{{ ou.operator }}</a>
-            {% elif ou.operator.noc in user_operator_nocs %}
+            {% elif ou.operator in user.operatoruser_set.values_list('operator', flat=True) %}
                 <a href="{% url 'operator_detail' ou.operator.noc %}">{{ ou.operator }}</a>
             {% else %}
                 {{ ou.operator }}
